backport: re PR tree-optimization/28888 (ICE in tree check: expected cond_expr, have label_expr in simplify_using_initial_conditions, at tree-ssa-loop-niter.c)

2006-11-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-09-22  Zdenek Dvorak <dvorakz@suse.cz>

        PR tree-optimization/28888
        * tree-if-conv.c (combine_blocks): Rewritten.
        * tree-cfg.c (tree_verify_flow_info): Check that edges with
        EDGE_TRUE/FALSE_VALUE follow COND_EXPR.

        * gcc.dg/pr28888.c: New test.

From-SVN: r118988